# anedya-camera-livestream-example-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  partitions.esp32s3.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
anedya-camera-livestream-example-esp32-cam/: CMakeLists.txt  sdkconfig.defaults
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/: CMakeLists.txt  idf_component.yml
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/core/include/: anedya_client.h  anedya_ota.h  anedya_sdk_config.h
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/core/src/: anedya_op_commands.c  anedya_op_setvaluestore.c  anedya_op_submitdata.c  anedya_op_valuestore_listobj.c
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/development/: git command.md
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/examples/example-application-internal-wifi/: README.md
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/examples/example-application-internal-wifi-http/: CMakeLists.txt
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/examples/example-application-internal-wifi-http/main/: CMakeLists.txt  otaManagement.c  timeManagement.h
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/examples/example-application-internal-wifi-mqtt/main/: otaManagement.c
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/examples/example-application-quectel-ec200-mqtt/main/: Kconfig.projbuild
anedya-camera-livestream-example-esp32-cam/components/anedya__anedya-esp/interfaces/include/: anedya_esp_quectelEC200_interface.h
anedya-camera-livestream-example-esp32-cam/main/: CMakeLists.txt  app_main.c  boards.h  idf_component.yml  webrtc_peer.h
anedya-esp32-cam/main/: CMakeLists.txt  Kconfig.projbuild  anedya_sig.c  anedya_sig.h  anedya_signaling.c  anedya_signaling.h  app_main.c  esp_log_compat.c  webrtc_peer.c  webrtc_peer.h
components/anedya__anedya-esp/: CHANGELOG.md  CMakeLists.txt  Kconfig
components/anedya__anedya-esp/core/include/: anedya_operations.h
components/anedya__anedya-esp/core/src/: anedya_client.c  anedya_json_parse.c  anedya_op_cmd_next.c  anedya_op_submitevent.c  anedya_op_vsupdates.c  anedya_ota.c
components/anedya__anedya-esp/examples/example-application-internal-wifi-http/: README.md
components/anedya__anedya-esp/examples/example-application-internal-wifi-http/main/: Kconfig.projbuild  main.c  submitLog.c  sync.h  timeManagement.c
components/anedya__anedya-esp/examples/example-application-internal-wifi-mqtt/: CMakeLists.txt
components/anedya__anedya-esp/examples/example-application-internal-wifi-mqtt/main/: main.c
components/anedya__anedya-esp/examples/example-application-quectel-ec200/: .gitignore  README.md  sdkconfig
components/anedya__anedya-esp/examples/example-application-quectel-ec200-mqtt/: CMakeLists.txt
components/anedya__anedya-esp/examples/example-application-quectel-ec200-mqtt/main/: commandHandler.c  main.c  submitData.c  sync.h  timeManagement.c  valueStore.c
components/anedya__anedya-esp/examples/example-application-quectel-ec200/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  otaManagement.c  submitLog.c  valueStore.c
components/anedya__anedya-esp/interfaces/esp32-quectel/: anedya_esp_quectelEC200_interface.c
components/anedya__anedya-esp/interfaces/esp32-wifi-quectel/: anedya_esp_quectel_interface.c  anedya_esp_wifi_interface.c
components/anedya__anedya-esp/interfaces/include/: anedya_esp_wifi_quectel_interface.h
(+50 files in other folders)
